unpackaged/main/default/objects/Order__c/Order__c.object-meta.xml
<CustomObject>
    <label>Orden</label>
    <nameField>
        <displayFormat>O-{00000000}</displayFormat>
        <label>Sales Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ordenes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>