unpackaged/main/default/objects/Order__c/fields/Aprobado__c.field-meta.xml
<CustomField>
    <fullName>Aprobado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aprobado?</label>
    <type>Checkbox</type>
</CustomField>