unpackaged/main/default/objects/Order__c/fields/Autorizado__c.field-meta.xml
<CustomField>
    <fullName>Autorizado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Autorizado?</label>
    <type>Checkbox</type>
</CustomField>