unpackaged/main/default/objects/Order__c/fields/Autorizado_Por__c.field-meta.xml
<CustomField>
    <fullName>Autorizado_Por__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Autorizado Por</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Ordenes (Autorizado Por?)</relationshipLabel>
    <relationshipName>Ordenes1</relationshipName>
    <type>Lookup</type>
</CustomField>