unpackaged/main/default/objects/Order__c/fields/Cantidad_Aprobada_c__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_Aprobada_c__c</fullName>
    <label>Cantidad_Aprobada__c</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>