unpackaged/main/default/objects/Order__c/fields/Cantidad_de_Cajas_en_la_Orden__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_de_Cajas_en_la_Orden__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Este campo dice cuantas cajas vienen en la orden.</description>
    <label>Cantidad de Cajas en la Orden</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>