unpackaged/main/default/objects/Order__c/fields/Cantidad_de_Claves__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_de_Claves__c</fullName>
    <label>Cantidad de Claves</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>