unpackaged/main/default/objects/Order__c/fields/Certificado_Por__c.field-meta.xml
<CustomField>
    <fullName>Certificado_Por__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Certificado Por</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Ordenes (Certificado Por)</relationshipLabel>
    <relationshipName>Ordenes3</relationshipName>
    <type>Lookup</type>
</CustomField>