unpackaged/main/default/objects/Order__c/fields/Clave_Presupuestal__c.field-meta.xml
<CustomField>
    <fullName>Clave_Presupuestal__c</fullName>
    <formula>UMU__r.Clave_Presupuestal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Clave Presupuestal</label>
    <type>Text</type>
</CustomField>