unpackaged/main/default/objects/Order__c/fields/Clon_Subalmacen__c.field-meta.xml
<CustomField>
    <fullName>Clon_Subalmacen__c</fullName>
    <label>Clon Subalmacen</label>
    <length>18</length>
    <type>Text</type>
</CustomField>