unpackaged/main/default/objects/Order__c/fields/Contacto__c.field-meta.xml
<CustomField>
    <fullName>Contacto__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Creado Por</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Ordenes</relationshipLabel>
    <relationshipName>Orders1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>