unpackaged/main/default/objects/Order__c/fields/DPN__c.field-meta.xml
<CustomField>
    <fullName>DPN__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DPN</label>
    <referenceTo>DPN__c</referenceTo>
    <relationshipLabel>Ordenes</relationshipLabel>
    <relationshipName>Ordenes</relationshipName>
    <type>Lookup</type>
</CustomField>