unpackaged/main/default/objects/Order__c/fields/DPN_No_Ordinario__c.field-meta.xml
<CustomField>
    <fullName>DPN_No_Ordinario__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DPN No Ordinario</label>
    <referenceTo>DPN__c</referenceTo>
    <relationshipLabel>Ordenes (DPN No Ordinario)</relationshipLabel>
    <relationshipName>Ordenes1</relationshipName>
    <type>Lookup</type>
</CustomField>