unpackaged/main/default/objects/Order__c/fields/Email_Delegado_Aprobo__c.field-meta.xml
<CustomField>
    <fullName>Email_Delegado_Aprobo__c</fullName>
    <label>Email Delegado Aprobo</label>
    <type>Email</type>
</CustomField>