unpackaged/main/default/objects/Order__c/fields/Email_Persona_Autorizo__c.field-meta.xml
<CustomField>
    <fullName>Email_Persona_Autorizo__c</fullName>
    <label>Email Persona Autorizo</label>
    <type>Email</type>
</CustomField>