unpackaged/main/default/objects/Order__c/fields/Entrega__c.field-meta.xml
<CustomField>
    <fullName>Entrega__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Entrega</label>
    <referenceTo>Entrega__c</referenceTo>
    <relationshipLabel>Ordenes</relationshipLabel>
    <relationshipName>Ordenes</relationshipName>
    <type>Lookup</type>
</CustomField>