unpackaged/main/default/objects/Order__c/fields/Es_Programa__c.field-meta.xml
<CustomField>
    <fullName>Es_Programa__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifica si un pedido es generado a través de una guía.</description>
    <label>Es Programa?</label>
    <type>Checkbox</type>
</CustomField>