unpackaged/main/default/objects/Order__c/fields/Estatus__c.field-meta.xml
<CustomField>
    <fullName>Estatus__c</fullName>
    <label>Estatus</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Procesando</fullName>
            </value>
            <value>
                <fullName>Verificando Disponibilidad</fullName>
            </value>
            <value>
                <fullName>Preparando Envío</fullName>
            </value>
            <value>
                <fullName>Enviado</fullName>
            </value>
            <value>
                <fullName>Llegada de Transporte</fullName>
            </value>
            <value>
                <fullName>Transferido</fullName>
            </value>
            <value>
                <fullName>Recibido</fullName>
            </value>
            <value>
                <fullName>Recibido Parcial</fullName>
            </value>
            <value>
                <fullName>Rechazado</fullName>
            </value>
            <value>
                <fullName>En Firma</fullName>
            </value>
            <value>
                <fullName>En Firma Parcial</fullName>
            </value>
            <value>
                <fullName>Certificado</fullName>
            </value>
            <value>
                <fullName>Certificado Parcial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>