unpackaged/main/default/objects/Order__c/fields/Estatus_No_Ordinario__c.field-meta.xml
<CustomField>
    <fullName>Estatus_No_Ordinario__c</fullName>
    <label>Estatus No Ordinario</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Por Aprobar</fullName>
            </value>
            <value>
                <fullName>Aprobado</fullName>
            </value>
            <value>
                <fullName>Rechazado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>