unpackaged/main/default/objects/Order__c/fields/Fecha_de_certificacion_de_la_remision__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_certificacion_de_la_remision__c</fullName>
    <label>Fecha de Certificación</label>
    <type>DateTime</type>
</CustomField>