unpackaged/main/default/objects/Order__c/fields/Fecha_de_Creacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Creacion__c</fullName>
    <formula>TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha de Creacion</label>
    <type>Date</type>
</CustomField>