unpackaged/main/default/objects/Order__c/fields/Fecha_De_Entrega__c.field-meta.xml
<CustomField>
    <fullName>Fecha_De_Entrega__c</fullName>
    <label>Fecha De Entrega</label>
    <type>Date</type>
</CustomField>