unpackaged/main/default/objects/Order__c/fields/Fecha_de_Firma__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Firma__c</fullName>
    <label>Fecha de Firma</label>
    <type>DateTime</type>
</CustomField>