unpackaged/main/default/objects/Order__c/fields/Fecha_Limite_de_Entrega__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Limite_de_Entrega__c</fullName>
    <label>Fecha Limite de Entrega</label>
    <type>DateTime</type>
</CustomField>