unpackaged/main/default/objects/Order__c/fields/Fecha_Maxima_de_Entrega__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Maxima_de_Entrega__c</fullName>
    <formula>Pedido__r.Fecha_Limite_de_Entrega__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha Maxima de Entrega</label>
    <type>Date</type>
</CustomField>