unpackaged/main/default/objects/Order__c/fields/Firmado_Por__c.field-meta.xml
<CustomField>
    <fullName>Firmado_Por__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Firmado Por</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Ordenes (Firmado Por)</relationshipLabel>
    <relationshipName>Ordenes2</relationshipName>
    <type>Lookup</type>
</CustomField>