unpackaged/main/default/objects/Order__c/fields/Folio_de_Entrega__c.field-meta.xml
<CustomField>
    <fullName>Folio_de_Entrega__c</fullName>
    <formula>Order_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Folio de Entrega</label>
    <type>Text</type>
</CustomField>