unpackaged/main/default/objects/Order__c/fields/Folio_de_Remision__c.field-meta.xml
<CustomField>
    <fullName>Folio_de_Remision__c</fullName>
    <formula>RIGHT(Folio_de_Entrega__c, 7)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Folio de Remisión</label>
    <type>Text</type>
</CustomField>