unpackaged/main/default/objects/Order__c/fields/Folio_del_Pedido__c.field-meta.xml
<CustomField>
    <fullName>Folio_del_Pedido__c</fullName>
    <displayFormat>{0000000000}</displayFormat>
    <label>Folio del Pedido</label>
    <type>AutoNumber</type>
</CustomField>