unpackaged/main/default/objects/Order__c/fields/Hora_De_Entrega__c.field-meta.xml
<CustomField>
    <fullName>Hora_De_Entrega__c</fullName>
    <label>Hora De Entrega</label>
    <type>Time</type>
</CustomField>