unpackaged/main/default/objects/Order__c/fields/ID_de_Pedido__c.field-meta.xml
<CustomField>
    <fullName>ID_de_Pedido__c</fullName>
    <label>ID de Pedido</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>