unpackaged/main/default/objects/Order__c/fields/Id_de_Viaje__c.field-meta.xml
<CustomField>
    <fullName>Id_de_Viaje__c</fullName>
    <formula>Entrega__r.Name</formula>
    <label>Id de Viaje</label>
    <type>Text</type>
</CustomField>