unpackaged/main/default/objects/Order__c/fields/ImageId__c.field-meta.xml
<CustomField>
    <fullName>ImageId__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ImageId</label>
    <type>Checkbox</type>
</CustomField>