unpackaged/main/default/objects/Order__c/fields/isRecibida__c.field-meta.xml
<CustomField>
    <fullName>isRecibida__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isRecibida</label>
    <type>Checkbox</type>
</CustomField>