unpackaged/main/default/objects/Order__c/fields/ltima_Fecha_de_Validaci_n_de_DPN_Activa__c.field-meta.xml
<CustomField>
    <fullName>ltima_Fecha_de_Validaci_n_de_DPN_Activa__c</fullName>
    <label>Última Fecha de Validación de DPN Activa</label>
    <type>Date</type>
</CustomField>