unpackaged/main/default/objects/Order__c/fields/Mostrar_Autorizaci_n__c.field-meta.xml
<CustomField>
    <fullName>Mostrar_Autorizaci_n__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mostrar Autorización?</label>
    <type>Checkbox</type>
</CustomField>