unpackaged/main/default/objects/Order__c/fields/Numero_de_Oficio__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_Oficio__c</fullName>
    <label>Numero de Oficio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>