unpackaged/main/default/objects/Order__c/fields/Numero_de_Subalmacen__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_Subalmacen__c</fullName>
    <formula>LEFT(Order_Number__c, 3)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Numero de Subalmacen</label>
    <type>Text</type>
</CustomField>