unpackaged/main/default/objects/Order__c/fields/Pedido__c.field-meta.xml
<CustomField>
    <fullName>Pedido__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pedido</label>
    <referenceTo>Pedido__c</referenceTo>
    <relationshipLabel>Ordenes</relationshipLabel>
    <relationshipName>Ordenes</relationshipName>
    <type>Lookup</type>
</CustomField>