unpackaged/main/default/objects/Order__c/fields/Pedido_Colocado__c.field-meta.xml
<CustomField>
    <fullName>Pedido_Colocado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pedido Colocado?</label>
    <type>Checkbox</type>
</CustomField>