unpackaged/main/default/objects/Order__c/fields/Pr_ximaFecha_de_Validaci_n_de_DPN_Activa__c.field-meta.xml
<CustomField>
    <fullName>Pr_ximaFecha_de_Validaci_n_de_DPN_Activa__c</fullName>
    <label>PróximaFecha de Validación de DPN Activa</label>
    <type>Date</type>
</CustomField>