unpackaged/main/default/objects/Order__c/fields/Seguimiento__c.field-meta.xml
<CustomField>
    <fullName>Seguimiento__c</fullName>
    <label>Seguimiento</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>