unpackaged/main/default/objects/Order__c/fields/UMU__c.field-meta.xml
<CustomField>
    <fullName>UMU__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>UMU</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Orders</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>