unpackaged/main/default/objects/Order__c/fields/UMU_Number__c.field-meta.xml
<CustomField>
    <fullName>UMU_Number__c</fullName>
    <formula>UMU__r.UMU__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UMU Number</label>
    <type>Text</type>
</CustomField>