unpackaged/main/default/objects/Order__c/fields/Usuario_ANS__c.field-meta.xml
<CustomField>
    <fullName>Usuario_ANS__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Usuario al que el transportista le transfiere las ordenes de la entrega por UMU.</description>
    <label>Usuario ANS</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Ordenes</relationshipName>
    <type>Lookup</type>
</CustomField>