unpackaged/main/default/objects/Order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Es_Programa__c</columns>
    <columns>Order_Number__c</columns>
    <columns>Tipo_de_Pedido__c</columns>
    <columns>UMU__c</columns>
    <columns>Estatus__c</columns>
    <columns>Entrega__c</columns>
    <columns>Folio_de_Remision__c</columns>
    <columns>Seguimiento__c</columns>
    <columns>Contacto__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>